force-app/main/default/objects/AcctPlanPortfolio__c/AcctPlanPortfolio__c.object-meta.xml
<CustomObject>
    <label>Account Plan Portfolio</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>AcctPlanPortfolio Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Portfolio Management</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>