force-app/main/default/objects/AcctPlanPortfolio__c/fields/Achievement__c.field-meta.xml
<CustomField>
    <fullName>Achievement__c</fullName>
    <description>Achievement</description>
    <formula>(SumOfTargetNIByRM__c *100) / TargetNI__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Achievement</label>
    <precision>18</precision>
    <scale>16</scale>
    <type>Number</type>
</CustomField>