force-app/main/default/objects/AcctPlanPortfolio__c/fields/Achievement_Report__c.field-meta.xml
<CustomField>
    <fullName>Achievement_Report__c</fullName>
    <description>For Report Only</description>
    <formula>SumOfTargetNIByRM__c / TargetNI__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>%Achievement</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>