force-app/main/default/objects/AcctPlanPortfolio__c/fields/AsOf__c.field-meta.xml
<CustomField>
    <fullName>AsOf__c</fullName>
    <description>version at date</description>
    <encryptionScheme>None</encryptionScheme>
    <label>AsOf</label>
    <length>10</length>
    <type>Text</type>
</CustomField>