force-app/main/default/objects/AcctPlanPortfolio__c/fields/DataAsOf__c.field-meta.xml
<CustomField>
    <fullName>DataAsOf__c</fullName>
    <description>Data as of</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Data as of</label>
    <type>DateTime</type>
</CustomField>