force-app/main/default/objects/AcctPlanPortfolio__c/fields/isPendingForApproval__c.field-meta.xml
<CustomField>
    <fullName>isPendingForApproval__c</fullName>
    <defaultValue>false</defaultValue>
    <label>isPendingForApproval</label>
    <type>Checkbox</type>
</CustomField>