force-app/main/default/objects/AcctPlanPortfolio__c/fields/Owner_Manager_Email_Formula__c.field-meta.xml
<CustomField>
    <fullName>Owner_Manager_Email_Formula__c</fullName>
    <formula>Owner:User.Manager.Email</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Owner Manager Email Formula</label>
    <type>Text</type>
</CustomField>