force-app/main/default/objects/AcctPlanPortfolio__c/fields/RefreshAsOf__c.field-meta.xml
<CustomField>
    <fullName>RefreshAsOf__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>RefreshAsOf</label>
    <type>DateTime</type>
</CustomField>