force-app/main/default/objects/AcctPlanPortfolio__c/fields/SalesOwner__c.field-meta.xml
<CustomField>
    <fullName>SalesOwner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Sales Owner</description>
    <inlineHelpText>Name of the current owner of the portfolio/account plan</inlineHelpText>
    <label>SalesOwner</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>AcctPlanPortfolio</relationshipLabel>
    <relationshipName>AcctPlanPortfolio</relationshipName>
    <type>Lookup</type>
</CustomField>