force-app/main/default/objects/AcctPlanPortfolio__c/fields/SumOfExpectedNIByAcctPlan__c.field-meta.xml
<CustomField>
    <fullName>SumOfExpectedNIByAcctPlan__c</fullName>
    <description>Sum of Expected NI by Account Plan</description>
    <label>Sum of Expected NI by Account Plan</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>