force-app/main/default/objects/AcctPlanPortfolio__c/fields/SumOfPerformance__c.field-meta.xml
<CustomField>
    <fullName>SumOfPerformance__c</fullName>
    <description>Sum of Performance</description>
    <label>Sum of Performance</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>