force-app/main/default/objects/AcctPlanPortfolio__c/fields/SumOfTargetNIByRM__c.field-meta.xml
<CustomField>
    <fullName>SumOfTargetNIByRM__c</fullName>
    <description>Sum of Target NI by RM</description>
    <label>Sum of Target NI by RM</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>