force-app/main/default/objects/AcctPlanPortfolio__c/fields/SumOfWallet__c.field-meta.xml
<CustomField>
    <fullName>SumOfWallet__c</fullName>
    <description>Sum of Wallet</description>
    <label>Sum of Wallet</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>