force-app/main/default/objects/AcctPlanPortfolio__c/fields/TargetNI__c.field-meta.xml
<CustomField>
    <fullName>TargetNI__c</fullName>
    <description>Target NI</description>
    <label>Target NI</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>