force-app/main/default/objects/AcctPlanPortfolio__c/validationRules/Validate_Year_Account_Plan_Portfolio.validationRule-meta.xml
<ValidationRule>
    <fullName>Validate_Year_Account_Plan_Portfolio</fullName>
    <active>true</active>
    <errorConditionFormula>ISBLANK(TEXT(Year__c))</errorConditionFormula>
    <errorDisplayField>Year__c</errorDisplayField>
    <errorMessage>Year is required</errorMessage>
</ValidationRule>