force-app/main/default/objects/AcctPlanPortfolio__c/listViews/All_Portfolio_Management.listView-meta.xml
<ListView>
    <fullName>All_Portfolio_Management</fullName>
    <columns>NAME</columns>
    <columns>Year__c</columns>
    <columns>Status__c</columns>
    <columns>RefreshAsOf__c</columns>
    <columns>SalesOwner__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Owner_IsActive__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>All Portfolio Management</label>
    <language>en_US</language>
</ListView>