force-app/main/default/objects/AcctPlanPortfolio__c/listViews/My_Portfolio_Management.listView-meta.xml
<ListView>
    <fullName>My_Portfolio_Management</fullName>
    <columns>NAME</columns>
    <columns>Year__c</columns>
    <columns>Status__c</columns>
    <columns>RefreshAsOf__c</columns>
    <columns>SalesOwner__c</columns>
    <filterScope>Mine</filterScope>
    <label>My Portfolio Management</label>
    <language>en_US</language>
</ListView>