force-app/main/default/objects/AcctPlanPortfolio__c/listViews/My_Team_Portfolio_2017.listView-meta.xml
<ListView>
    <fullName>My_Team_Portfolio_2017</fullName>
    <columns>NAME</columns>
    <columns>TargetNI__c</columns>
    <columns>SumOfWallet__c</columns>
    <columns>SumOfPerformance__c</columns>
    <columns>SumOfTargetNIByRM__c</columns>
    <columns>SumOfExpectedNIByAcctPlan__c</columns>
    <columns>Status__c</columns>
    <columns>Account_Plan_Portfolio_Owner_Team__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Year__c</field>
        <operation>equals</operation>
        <value>2017</value>
    </filters>
    <filters>
        <field>Owner_IsActive__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>My Team Portfolio-2017</label>
    <language>en_US</language>
    <sharedTo>
        <roleAndSubordinates>AL_WS_Loan_Disbursement_SettlementTL</roleAndSubordinates>
        <roleAndSubordinates>CCBO</roleAndSubordinates>
    </sharedTo>
</ListView>